--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,13 @@
 @font-face {
-	font-family: "AmaticSC-Regular";
+	font-family: 'Lobster';
 	font-style: normal;
 	font-weight: normal;
-	src: local('AmaticSC-Regular'), url('../fonts/AmaticSC-Regular.ttf') format('truetype');
-}
-
-@font-face {
-	font-family: "Lato-Regular";
-	font-style: normal;
-	font-weight: normal;
-	src: local('Lato-Regular'), url('../fonts/Lato-Regular.ttf') format('truetype');
+	src: local('Lobster'), url('../fonts/Lobster-Regular.ttf') format('truetype');
 }
 
 body {
     margin: 0;
-    background-color: #f5f5f5;
+    background-color: #7dc7f28c;
 }
 
 main {
@@ -49,9 +42,9 @@ header a {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "AmaticSC-Regular";
+    font-family: "Lobster";
     font-size: 28px;
-    color: #b6b096;
+    color: #000000;
     font-weight: bold;
 }
 
@@ -65,15 +58,15 @@ header a {
 }
 
 .navbtn:hover {
-    background-color: #f1eeeef5;
+    background-color:#ffffff;
 }
 
 .navbtn:hover .link1 {
-    color: #ef9d87;
+    color: #436e87;
 }
 
 .dropdownsubmenu:hover .link2 {
-    color: #ef9d87;
+    color: #436e87;
 }
 
 .navbtn:after {
@@ -81,7 +74,7 @@ header a {
     display: block;
     width: 0;
     height: 2px;
-    background: #ef9d87;
+    background: #436e87;
     transition: width .3s;
 }
 
@@ -116,7 +109,7 @@ header a {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f1eeeef5;
+    background-color: #ffffff;
 }
 
 .dropdownsubmenu a {
@@ -130,7 +123,6 @@ header a {
     display: block;
     height: 34px;
     width: 34px;
-    background-image: url(../img/arrow-right.png);
     background-repeat: no-repeat;
     padding-right: 26px;
     opacity: 0;
@@ -144,7 +136,7 @@ header a {
 }
 
 .logoheader {
-    width: 444px;
+    width: 344px;
     height: 240px;
     margin-bottom: 20px;
 }
@@ -170,32 +162,32 @@ form fieldset {
 
 form legend {
     font-size: 34px;
-    font-family: "AmaticSC-Regular";
+    font-family: "Lobster";
     font-weight: bold;
-    color: #ef9d87;
+    color: #436e87;
 }
 
 form label {
     font-size: 28px;
-    font-family: "AmaticSC-Regular";
+    font-family: "Lobster";
     font-weight: bold;
-    color: #b6b096;
+    color: #000000;
 }
 
 form input[type="text"], input[type="password"], input[type="email"], textarea, select {
     height: 50px;
     width: 260px;
-    border: 2px solid #b6b096;
+    border: 2px solid #000000;
     margin: 20px;
     padding-left: 10px;
     font-size: 18px;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     color: #262626;
 }
 
 form input[type="file"] {
     font-size: 18px;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     color: #262626;
     margin: 20px;
     padding-left: 10px;
@@ -204,16 +196,16 @@ form input[type="file"] {
 form textarea {
     height: 60vh;
     width: 50vw;
-    border: 2px solid #b6b096;
+    border: 2px solid #000000;
     margin: 20px;
     padding-left: 10px;
     font-size: 18px;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     color: #262626;
 }
 
 form input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
-    border: 2px solid #ef9d87;
+    border: 2px solid #436e87;
     transition: all 0.25s ease-in-out;
     outline: none;
 }
@@ -221,18 +213,18 @@ form input[type="text"]:focus, input[type="password"]:focus, input[type="email"]
 form input[type="submit"] {
     height: 60px;
     width: 260px;
-    border: 2px solid #b6b096;
+    border: 2px solid #000000;
     margin: 28px;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-weight: bold;
-    color: #b6b096;
+    color: #000000;
     font-size: 16px;
     background-color: white;
 }
 
 form input[type="submit"]:hover {
-    border: 2px solid #ef9d87;
-    color: #ef9d87;
+    border: 2px solid #436e87;
+    color: #436e87;
     transform: scale(1.1);
     transition: all 0.25s ease-in-out;
 }
@@ -253,12 +245,12 @@ form input[type="submit"]:not(:hover) {
 }
 
 .cform p {
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 18px;
 }
 
 .red {
-    color: #ef9d87;
+    color:#436e87;
 }
 
 .center {
@@ -266,7 +258,7 @@ form input[type="submit"]:not(:hover) {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 24px;
 }
 
@@ -295,8 +287,8 @@ form input[type="submit"]:not(:hover) {
     padding-left: 18px;
     /* background-color: pink; */
     font-size: 36px;
-    color: #ef9d87;
-    font-family: "AmaticSC-Regular";
+    color :#436e87;
+    font-family: "Lobster";
     font-weight: bold;
 }
 
@@ -304,7 +296,7 @@ form input[type="submit"]:not(:hover) {
     height: 184px;
     overflow: hidden;
     margin: 8px 18px 0 18px;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     /* background-color: cyan; */
 }
 
@@ -321,7 +313,7 @@ form input[type="submit"]:not(:hover) {
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-top: 4px solid #ef9d87;
+    border-top: 4px solid #436e87;
 }
 
 .basleftarticles {
@@ -339,7 +331,7 @@ form input[type="submit"]:not(:hover) {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 18px;
 }
 
@@ -366,23 +358,23 @@ form input[type="submit"]:not(:hover) {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 16px;
     color: whitesmoke;
     font-weight: 500;
-    background-color: #ef9d87;
+    background-color: #436e87;
 }
 
 .basrightarticles a:hover {
     background-color: whitesmoke;
-    border: 2px solid #ef9d87;
-    color: #ef9d87;
+    border: 2px solid #436e87;
+    color: #436e87;
     transform: scaleX(1.1);
     transition: all 0.25s ease-in-out;
 }
 
 .basrightarticles a:not(:hover) {
-    background-color: #ef9d87;
+    background-color: #436e87;
     border: none;
     color: whitesmoke;
     transform: scaleX(1);
@@ -405,24 +397,24 @@ form input[type="submit"]:not(:hover) {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 16px;
     color: whitesmoke;
     font-weight: 500;
-    background-color: #ef9d87;
+    background-color: #436e87;
     margin: 4px;
 }
 
 .btnpages a:hover {
     background-color: whitesmoke;
-    border: 2px solid #ef9d87;
-    color: #ef9d87;
+    border: 2px solid #436e87;
+    color: #436e87;
     transform: scaleX(1.1);
     transition: all 0.25s ease-in-out;
 }
 
 .btnpages a:not(:hover) {
-    background-color: #ef9d87;
+    background-color: #436e87;
     border: none;
     color: whitesmoke;
     transform: scaleX(1);
@@ -435,23 +427,23 @@ form input[type="submit"]:not(:hover) {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 16px;
     color: whitesmoke;
     font-weight: 500;
-    background-color: #ef9d87;
+    background-color: #436e87;
 }
 
 .btnbottom a:hover {
     background-color: whitesmoke;
-    border: 2px solid #ef9d87;
-    color: #ef9d87;
+    border: 2px solid #436e87;
+    color: #436e87;
     transform: scaleX(1.1);
     transition: all 0.25s ease-in-out;
 }
 
 .btnbottom a:not(:hover) {
-    background-color: #ef9d87;
+    background-color: #436e87;
     border: none;
     color: whitesmoke;
     transform: scaleX(1);
@@ -486,16 +478,16 @@ footer a {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "AmaticSC-Regular";
+    font-family: "Lobster";
     font-size: 28px;
-    color: #b6b096;
+    color: #000000;
     font-weight: bold;
 }
 
 #copyrights{
-    font-family: "AmaticSC-Regular";
+    font-family: "Lobster";
     font-size: 28px;
-    color: #b6b096;
+    color: #000000;
 }
 
 /* INDEX */
@@ -527,7 +519,7 @@ footer a {
 
 .profilepart p {
     margin: 24px 0 0 0;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 16px;
 }
 
@@ -536,13 +528,13 @@ footer a {
     width: 340px;
     border-radius: 50%;
     background-image: url(../img/profilepic.png);
-    border: 4px solid #ef9d87;
+    border: 4px solid #436e87;
 }
 
 .profilepart h1 {
     font-size: 34px;
-    font-family: "AmaticSC-Regular";
-    color: #ef9d87;
+    font-family: "Lobster";
+    color: #436e87;
     margin: 24px 0 0 0;
 }
 
@@ -558,23 +550,23 @@ footer a {
 
 .categoriepart li {
     margin: 24px 0 0 0;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 16px;
     list-style: none;
 }
 
 .categoriepart h1 {
     font-size: 34px;
-    font-family: "AmaticSC-Regular";
-    color: #ef9d87;
+    font-family: "Lobster";
+    color: #436e87;
     margin: 24px 0 0 0;
 }
 
 .categoriepart span {
     font-size: 24px;
     font-weight: bold;
-    font-family: "AmaticSC-Regular";
-    color: #ef9d87;
+    font-family: "Lobster";
+    color: #436e87;
     margin: 24px 0 0 0;
     padding-right: 24px;
 }
@@ -588,7 +580,7 @@ footer a {
 
 .cmid {
     color: #262626;
-    font-family: "Lato-Regular";
+    font-family: "Lobster";
     font-size: 24px;
 }
 
@@ -604,8 +596,8 @@ footer a {
 }
 
 .cmid h1 {
-    color: #ef9d87;
-    font-family: "AmaticSC-Regular";
+    color: #436e87;
+    font-family: "Lobster";
     font-size: 34px;
 }
 
@@ -693,8 +685,8 @@ footer a {
 }
 
 .messageleft {
-    color: #ef9d87;
-    font-family: "AmaticSC-Regular";
+    color: #436e87;
+    font-family: "Lobster";
 }
 
 /* ADMIN */
@@ -718,9 +710,9 @@ footer a {
 }
 
 .titleadmin {
-    font-family: "AmaticSC-Regular";
+    font-family: "Lobster";
     font-size: 54px;
-    color: #ef9d87;
+    color: #436e87;
     display: flex;
     justify-content: center;
     margin: 40px 0 40px 0;
